<resources>
    <string name="app_name">Wittyape</string>
    <string name="sign_in">Sign-In</string>
    <string name="email">Parent\'s Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="helping_kids_excel">Helping Kids Excel</string>
    <string name="wittyape">Wittyape</string>
    <string name="display_name">Display Name</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="master_mathematics">Master Mathematics</string>
    <string name="mathematics">Mathematics</string>
    <string name="english">English</string>
    <string name="open">Oepn</string>
    <string name="close">Close</string>
    <string name="others">Others</string>
    <string name="help">Help &amp; feedback</string>
    <string name="exit">Exit</string>
    <string name="learn">Learn</string>
    <string name="profile">Wittyape Profile</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="primary">Primary</string>
    <string name="counting">Counting</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="ready_to_learn">Ready to learn?</string>
    <string name="choose_class">Select level</string>
    <string name="update">Update</string>
    <string name="log_out">Log out</string>
    <string name="loading_display_name">Loading display name</string>
    <string name="practice">Practice</string>
    <string name="score">Score</string>
    <string name="practice_couting">Practice Couting</string>
    <string name="timer">Timer</string>
    <string name="question">Question?</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome</string>
    <string name="correct_answer">Correct Answer:</string>
    <string name="total_questions">Total Questions:</string>
    <string name="accuracy">Accuracy</string>
    <string name="performace">Performace</string>
    <string name="practice_addition">Practice Addition</string>
    <string name="practice_subtraction">Practice Subtraction</string>
    <string name="practice_multiplication">Practice Multiplication</string>
    <string name="addition_text_1">Addition is bringing two or more numbers (or things) together to make a new total</string>
    <string name="addition_text_2">Here 2 balls are added to 1 ball to make 3 balls</string>
    <string name="addition_text_3">In Numerals : 2 + 1 = 3</string>
    <string name="addition_text_4">In Words : Two plus one equals three</string>
    <string name="subtraction_text_1">Subtraction is taking one number away from another.</string>
    <string name="subtraction_text_2">Say you had 3 balls</string>
    <string name="subtraction_text_3">Your friend borrowed this red ball</string>
    <string name="subtraction_text_4">Now you have green and blue ball</string>
    <string name="subtraction_text_5">In Numerals : 3 – 1 = 2</string>
    <string name="subtraction_text_6">In Words : Three minus one equals two</string>
    <string name="equals_symbol">=</string>
    <string name="add_symbol">+</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="loading">loading</string>
    <string name="top_scorer">Top Scorer</string>
    <string name="scoring_system">Scoring system</string>
    <string name="scoring_system_1">How to Score Points?</string>
    <string name="scoring_system_2">Mathematics:\n\nEach Right answer wins you one point.\nYou get 30 seconds to earn maximum points with right answers.\n\nEnglish:\n\nYou get one point on getting the right answer on your first attempt.\n\nNote: Active Internet Connection is needed to update and upload your score.\n\nScores of Top 10 students will be published on leaderboard.</string>
    <string name="multiplication">Multiplication</string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>
    <string name="about_us_1">Wittyape is a free self–driven learning management system that offers highly personalised and effective learning programs for classes 1 to 4 for CBSE, ICSE and other boards to help them learn by practice. The app and website provide multiple questions to learn and engage with their subject by solving interactive exercises to test their learning. Our products are carefully designed to ensure maximum learning through proven techniques such as adaptive learning.</string>
    <string name="mail_us">Mail us</string>
    <string name="have_feedback_or_query">Have feedback or query?</string>
    <string name="terms_condition">Terms and conditions</string>
    <string name="terms_condition_1">Welcome to Wittyape!\n\nThese terms and conditions outline the rules and regulations for the use of Wittyape\'s App/Website.\nBy accessing this app/website we assume you accept these terms and conditions. Do not continue to use Wittyape if you do not agree to take all of the terms and conditions stated on this page.\nAll terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing laws. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to the same.\n\nLicense\n\nUnless otherwise stated, Wittyape and/or its licensors own the intellectual property rights for all material on Wittyape. All intellectual property rights are reserved. You may access this from Wittyape for your own personal use subjected to restrictions set in these terms and conditions.\nYou must not:\n1 Republish material from Wittyape\n2 Sell, rent or sub-license material from Wittyape\n3 Reproduce, duplicate or copy material from Wittyape\n4 Redistribute content from Wittyape. \n\nContent Liability\n\nWe shall not be held responsible for any content that appears on your App. You agree to protect and defend us against all claims that are rising on your App/Website. No link(s) should appear on any App/Website that may be interpreted as libelous, obscene or criminal, or which infringes, otherwise violates, or advocates the infringement or other violation of, any third party rights.\n\nReservation of Rights\n\nWe reserve the right to request that you remove all links or any particular link to our App/Website. You approve to immediately remove all links to our App/Website upon request. We also reserve the right to amend these terms and conditions and it’s linking policy at any time. By continuously linking to our App/Website, you agree to be bound to and follow these linking terms and conditions. \n\nRemoval of users\n\nIf you find any username on our App that is offensive for any reason, you are free to contact and inform us at any moment. We will consider requests to remove the user but we are not obligated to or so or to respond to you directly.\nWe do not ensure that the information on this app/website is correct, we do not warrant its completeness or accuracy; nor do we promise to ensure that the app/website remains available or that the material on the website is kept up to date.\n\nYour Privacy\n\nPlease read Privacy Policy</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_1">Consent\n\nBy using our app/website, you hereby consent to our Privacy Policy and agree to its terms. \n\nInformation we collect\n\nThe personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made clear to you at the point we ask you to provide your personal information.\nIf you contact us directly, we may receive additional information about you such as your name, email address, phone number, the contents of the message and/or attachments you may send us, and any other information you may choose to provide.\nWhen you register for an Account, we may ask for your contact information, including items such as name, company name, address, email address, and telephone number.\n\nLog Files\n\nWittyape follows a standard procedure of using log files. These files log visitors when they visit app/websites. All hosting companies do this and a part of hosting services analytics. The information collected by log files include date and time stamp. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the app/site, tracking users movement on the app/website, and gathering demographic information.\n\nGDPR Data Protection Rights\n\nWe would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:\nThe right to rectification – You have the right to request that we correct any information you believe is inaccurate. You also have the right to request that we complete the information you believe is incomplete.\nThe right to erasure – You have the right to request that we erase your personal data, under certain conditions.\nThe right to restrict processing – You have the right to request that we restrict the processing of your personal data, under certain conditions.\nThe right to object to processing – You have the right to object to our processing of your personal data, under certain conditions.\nThe right to data portability – You have the right to request that we transfer the data that we have collected to another organization, or directly to you, under certain conditions.\nIf you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us.\n\nChildren Information\n\nAnother part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.\nWittyape does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_1">The information contained in this platform is for general educational purposes only. We make no representations or warranties of any kind, about the completeness, accuracy, reliability, suitability or availability with respect to the application/website or the information, products, services, or related graphics contained on the application/website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.\nIn no event will we be liable for any loss or damage including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection with, the use of this application/website.</string>
    <string name="syllabus">Syllabus</string>
    <string name="animal_sounds">Animal sounds</string>
    <string name="resource_english_animal_sound">Here’s a list of a some other animal sound names.\n\nFox - yelp\nBull - bellow\nBee - buzz\nOwl - hoot</string>
    <string name="cat_meow">Cat - Meow</string>
    <string name="cow_moo">Cow - Moo</string>
    <string name="crow_caw">Crow - Caw</string>
    <string name="dog_bark">Dog - Bark</string>
    <string name="duck_quack">Duck - Quack</string>
    <string name="wolf_howl">Wolf - Howl</string>
</resources>