<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_home"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />

    <item
        android:id="@+id/submenu_subject"
        android:title="@string/learn">

        <menu>

            <item
                android:id="@+id/menu_item_maths"
                android:icon="@drawable/icon_menu_maths"
                android:title="@string/mathematics" />
            <item
                android:id="@+id/menu_item_english"
                android:icon="@drawable/icon_menu_english"
                android:title="@string/english" />

            <item
                android:id="@+id/menu_item_syllabus"
                android:icon="@drawable/icon_syllabus"
                android:title="@string/syllabus" />

        </menu>

    </item>

    <item
        android:id="@+id/submenu_leaderboard"
        android:title="@string/score">

        <menu>

            <item
                android:id="@+id/menu_item_leaderboard"
                android:icon="@drawable/icon_menu_leaderboard"
                android:title="@string/leaderboard" />

            <item
                android:id="@+id/menu_item_scoring_system"
                android:icon="@drawable/icon_menu_scoring_system"
                android:title="@string/scoring_system" />

        </menu>

    </item>

    <item
        android:id="@+id/submenu_others"
        android:title="@string/others">

        <menu>

            <item
                android:id="@+id/menu_item_about"
                android:icon="@drawable/icon_about"
                android:title="@string/about" />

            <item
                android:id="@+id/menu_item_terms_condition"
                android:icon="@drawable/icon_terms_condition"
                android:title="@string/terms_condition" />

            <item
                android:id="@+id/menu_item_exit"
                android:icon="@drawable/icon_exit"
                android:title="@string/exit" />

        </menu>

    </item>

</menu>