<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/design_button_answer_count"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:padding="7dp"
        android:paddingBottom="15dp"
        android:text="@string/performace"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_correct_ans_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/correct_answer"
        android:textColor="@color/black_custom"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_total_question_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/total_questions"
        android:textColor="@color/black_custom"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_accuracy_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30sp"
        android:background="@drawable/design_button_answer_count"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/accuracy"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>