<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/design_button_answer_count"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:text="@string/about_us"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/about_us_1"
            android:textColor="@color/black_custom"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/have_feedback_or_query"
            android:textColor="@color/black_custom"
            android:textSize="19sp" />

        <Button
            android:id="@+id/button_help_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/design_button_login"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal|center_vertical"
            android:padding="5dp"
            android:text="@string/mail_us"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp" />

    </LinearLayout>

</ScrollView>